[package]
name = "raft"
version = "0.1.0"
authors = ["Braden Hitchcock <developer.hitchcock@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build  = "0.5.1"
